# receiver/app.py
@@ -92,6 +92,9 @@ def addDelivery(body):
         f"Returned event addOrder response with (id: {body['traceID']} with status 201")
     return NoContent, 201
 
+def get_health():
+    """ Returns 200 """
+    return { "message": "Healthy!"}, 200
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yaml", base_path="/receiver",strict_validation=True, validate_responses=True)
